--- a/Diabetes Prediction.ipynb
+++ b/Diabetes Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4                     2.288   33         1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-6-6709aa251a4e>:2: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "<ipython-input-176-6709aa251a4e>:2: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  plt.tight_layout(True)\n"
      ]
     },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-6709aa251a4e>:2: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "<ipython-input-179-6709aa251a4e>:2: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  plt.tight_layout(True)\n"
      ]
     },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-10-f484dc64eaff>:25: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "<ipython-input-180-f484dc64eaff>:25: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  plt.tight_layout( True )\n"
      ]
     },
@@ -405,12 +405,12 @@
     "- Max: Maximum Value\n",
     "- Q1: 25% of values Lower Quartile\n",
     "- Median: Center Value\n",
-    "- Q3: 75% of values Upper Quartlie"
+    "- Q3: 75% of values Upper Quartile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "max                        2.42   81.00      1.00  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
      "text": [
       "E:\\Anaconda\\lib\\site-packages\\seaborn\\axisgrid.py:1912: UserWarning: The `size` parameter has been renamed to `height`; please update your code.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "<ipython-input-13-8a79956b7e99>:2: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "<ipython-input-183-8a79956b7e99>:2: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  plt.tight_layout(False)\n"
      ]
     },
@@ -701,14 +701,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-14-1266f5867621>:9: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "<ipython-input-184-1266f5867621>:9: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  plt.tight_layout( True )\n"
      ]
     },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,21 +884,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data_y_train_normalized' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-7c4dd6bcc4de>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mdata_X_train_normal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mX_train_normal\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m[\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m8\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mdata_y_train_normal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m \u001b[0mcol\u001b[0m\u001b[1;33m[\u001b[0m \u001b[1;36m8\u001b[0m \u001b[1;33m]\u001b[0m \u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mdata_train_normalized\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_X_train_normal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mdata_y_train_normalized\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'data_y_train_normalized' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -909,7 +897,7 @@
     "\n",
     "data_X_train_normal = pd.DataFrame( X_train_normal, columns=col[ 0:8 ], index=y_train.index )\n",
     "data_y_train_normal = pd.DataFrame( y_train, columns = [ col[ 8 ] ] )\n",
-    "data_train_normalized = data_X_train_normal.join( data_y_train_normalized )"
+    "data_train_normalized = data_X_train_normal.join( data_y_train_normal )"
    ]
   },
   {
@@ -923,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1035,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-30-a2c459f6cf25>:25: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "<ipython-input-194-a2c459f6cf25>:25: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  plt.tight_layout( True )\n"
      ]
     },
@@ -1117,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,14 +1449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-117-a3237c7b63b8>:17: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "<ipython-input-202-a3237c7b63b8>:17: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  plt.tight_layout( True )\n"
      ]
     },
@@ -1491,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1542,7 @@
        "kNN (PCA)    0.471     0.649      0.500   0.444"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,14 +1644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-117-a3237c7b63b8>:17: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "<ipython-input-202-a3237c7b63b8>:17: MatplotlibDeprecationWarning: Passing the pad parameter of tight_layout() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  plt.tight_layout( True )\n"
      ]
     },
@@ -1686,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1737,7 @@
        "Decision Tree (PCA)    0.423     0.610      0.440   0.407"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1844,7 @@
        "Decision Tree  0.614     0.714      0.583   0.648"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1865,20 +1853,6 @@
     "df_results = evaluate_best_estimators_results( best_estimators )\n",
     "df_results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
