Reference added to ipynb

--- a/Diabetes Prediction.ipynb
+++ b/Diabetes Prediction.ipynb
@@ -1853,6 +1853,31 @@
     "df_results = evaluate_best_estimators_results( best_estimators )\n",
     "df_results"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "- https://www.kaggle.com/prachiparmar/diabetes-diagnosis-knn-elaborated\n",
+    "- https://www.kaggle.com/namanmanchanda/pima-indian-diabetes-eda-and-prediction\n",
+    "- https://www.kaggle.com/fahadmehfoooz/diabetes-with-smote-and-6-models\n",
+    "- https://www.kaggle.com/jurk06/knn-classification-using-gridseachcv\n",
+    "- https://imbalanced-learn.org/stable/over_sampling.html\n",
+    "- https://www.kaggle.com/davidepani/pima-indians-diabetes-analysis\n",
+    "- https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/\n",
+    "- https://towardsdatascience.com/a-complete-guide-to-principal-component-analysis-pca-in-machine-learning-664f34fc3e5a\n",
+    "- https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html\n",
+    "- https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.KFold.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
